--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,17 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="/node_modules/toastr/build/toastr.min.js"></script>
+
+  <link rel="stylesheet" href="/node_modules/ng2f-bootstrap/dist/bootstrap.min.css">  
+  <link rel="stylesheet" href="/node_modules/toastr/build/toastr.min.css">
+
+
+
 </head>
-<body>
-  <app-root>Loading...</app-root>
+<body class="container">
+  <events-app>Loading...</events-app>
 </body>
 </html>
