--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Ng2Fundamentalz</title>
@@ -8,16 +9,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="/node_modules/toastr/build/toastr.min.js"></script>
+  <!--<script src="/node_modules/jquery/dist/jquery.min.js"></script>-->
+  <!--<script src="/node_modules/toastr/build/toastr.min.js"></script>-->
 
-  <link rel="stylesheet" href="/node_modules/ng2f-bootstrap/dist/bootstrap.min.css">  
-  <link rel="stylesheet" href="/node_modules/toastr/build/toastr.min.css">
+  <!--<link rel="stylesheet" href="/node_modules/ng2f-bootstrap/dist/bootstrap.min.css">-->
+  <!--<link rel="stylesheet" href="/node_modules/toastr/build/toastr.min.css">-->
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+  <link href="/node_modules/ng2-toastr/bundles/ng2-toastr.min.css" rel="stylesheet" />
+  <script src="/node_modules/ng2-toastr/bundles/ng2-toastr.min.js"></script>
+
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
 
 
 
 </head>
+
 <body class="container">
   <events-app>Loading...</events-app>
 </body>
+
 </html>
