--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <!--<script src="/node_modules/jquery/dist/jquery.min.js"></script>-->
-  <!--<script src="/node_modules/toastr/build/toastr.min.js"></script>-->
+  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="/node_modules/toastr/build/toastr.min.js"></script>
 
-  <!--<link rel="stylesheet" href="/node_modules/ng2f-bootstrap/dist/bootstrap.min.css">-->
-  <!--<link rel="stylesheet" href="/node_modules/toastr/build/toastr.min.css">-->
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-  <link href="/node_modules/ng2-toastr/bundles/ng2-toastr.min.css" rel="stylesheet" />
-  <script src="/node_modules/ng2-toastr/bundles/ng2-toastr.min.js"></script>
+  <!--<link rel="stylesheet" href="/node_modules/ng2f-bootstrap/dist/bootstrap.min.css">  -->
+  <link rel="stylesheet" href="/node_modules/toastr/build/toastr.min.css">
 
 
   <!-- Latest compiled and minified CSS -->
